--- a/package.json
+++ b/package.json
@@ -1,73 +1,32 @@
 {
   "name": "cra-template",
-  "version": "0.1.0",
-  "private": false,
+  "version": "1.0.0",
+  "description": "Personal Create React App template with typescript and storybook.",
+  "keywords": [
+    "create-react-app",
+    "react",
+    "template",
+    "storybook",
+    "typescript"
+  ],
+  "main": "template.json",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "test": "echo \"no tests\""
   },
+  "author": "folpe",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/folpe/cra-template"
+  },
+  "bugs": {
+    "url": "https://github.com/folpe/cra-template/issues"
+  },
+  "files": [
+    "template",
+    "template.json"
+  ],
   "engines": {
-    "node": ">= 14",
-    "npm": ">= 6"
-  },
-  "prettier": {
-    "jsxSingleQuote": true,
-    "semi": false,
-    "singleQuote": true
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "dependencies": {
-    "date-fns": "^2.22.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
-  "devDependencies": {
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/node-logger": "^6.2.9",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.9",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "node": ">=10"
   }
 }
